{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 16,
  "lineage": "cf4e008a-f292-7303-04b7-4ceb3d392eee",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-50c0ea46",
            "arn": "arn:aws:ec2:us-east-1:689227456688:instance/i-0e687136426429136",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e687136426429136",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a612fa4ee25b818",
            "private_dns": "ip-10-10-20-28.ec2.internal",
            "private_ip": "10.10.20.28",
            "public_dns": "ec2-3-91-45-138.compute-1.amazonaws.com",
            "public_ip": "3.91.45.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-02fd6a6ab871879ab",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05cbd6e1dd83b86d7",
            "tags": {
              "Environment": "dev",
              "Name": "Bastion",
              "Project": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066ad2c8a9b879e0d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-048f224ce4a6533b3",
            "owner_id": "689227456688",
            "tags": {
              "Environment": "dev",
              "Name": "InternetGW",
              "Project": "test"
            },
            "vpc_id": "vpc-072ea53a28e03fc78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "subnet-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048f224ce4a6533b3",
            "id": "r-rtb-0e1d97eec07566fe81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1d97eec07566fe8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.subnet-route-table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e1d97eec07566fe8",
            "owner_id": "689227456688",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048f224ce4a6533b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "PublicRouteTable",
              "Project": "test"
            },
            "vpc_id": "vpc-072ea53a28e03fc78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0316fbcf4b7fa38f7",
            "route_table_id": "rtb-0e1d97eec07566fe8",
            "subnet_id": "subnet-05cbd6e1dd83b86d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.subnet-route-table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bce4b8be0d115eef",
            "route_table_id": "rtb-0e1d97eec07566fe8",
            "subnet_id": "subnet-0600bc2800bf594cb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.subnet-route-table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0786364ee02832ae0",
            "route_table_id": "rtb-0e1d97eec07566fe8",
            "subnet_id": "subnet-085b06e0524d3a903"
          },
          "dependencies": [
            "module.vpc.aws_route_table.subnet-route-table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b4fd69df2017c3f",
            "route_table_id": "rtb-0e1d97eec07566fe8",
            "subnet_id": "subnet-05946eabb06a23ebb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.subnet-route-table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689227456688:security-group/sg-066ad2c8a9b879e0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066ad2c8a9b879e0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200402145624124600000001",
            "name_prefix": null,
            "owner_id": "689227456688",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-072ea53a28e03fc78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689227456688:subnet/subnet-05cbd6e1dd83b86d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.20.0/27",
            "id": "subnet-05cbd6e1dd83b86d7",
            "map_public_ip_on_launch": false,
            "owner_id": "689227456688",
            "tags": {
              "Environment": "dev",
              "Name": "public_Subnet",
              "Project": "test"
            },
            "vpc_id": "vpc-072ea53a28e03fc78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689227456688:subnet/subnet-0600bc2800bf594cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.20.32/27",
            "id": "subnet-0600bc2800bf594cb",
            "map_public_ip_on_launch": false,
            "owner_id": "689227456688",
            "tags": {
              "Environment": "dev",
              "Name": "public_Subnet",
              "Project": "test"
            },
            "vpc_id": "vpc-072ea53a28e03fc78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689227456688:subnet/subnet-085b06e0524d3a903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.20.64/27",
            "id": "subnet-085b06e0524d3a903",
            "map_public_ip_on_launch": false,
            "owner_id": "689227456688",
            "tags": {
              "Environment": "dev",
              "Name": "public_Subnet",
              "Project": "test"
            },
            "vpc_id": "vpc-072ea53a28e03fc78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689227456688:subnet/subnet-05946eabb06a23ebb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.20.96/27",
            "id": "subnet-05946eabb06a23ebb",
            "map_public_ip_on_launch": false,
            "owner_id": "689227456688",
            "tags": {
              "Environment": "dev",
              "Name": "public_Subnet",
              "Project": "test"
            },
            "vpc_id": "vpc-072ea53a28e03fc78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689227456688:vpc/vpc-072ea53a28e03fc78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.20.0/24",
            "default_network_acl_id": "acl-0f434caa1adedb2a6",
            "default_route_table_id": "rtb-0918ce24f14994271",
            "default_security_group_id": "sg-0272262f94c7a1dcb",
            "dhcp_options_id": "dopt-4c590937",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-072ea53a28e03fc78",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0918ce24f14994271",
            "owner_id": "689227456688",
            "tags": {
              "Environment": "dev",
              "Name": "Default",
              "Project": "test"
            }
          }
        }
      ]
    }
  ]
}